--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex justify-content-between">
             <a href="#" class="navbar-brand d-flex align-items-center">
-                <strong>Cloud Academy Front Example - {본인의 이름}</strong>
+                <strong>Cloud Academy Front Example - 용다은</strong>
             </a>
         </div>
     </div>
